[package]
name = "multichain_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
serde = "1"
hex = "0.4.3"
ic-cdk-macros = "0.6.0"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
ethereum-tx-sign = "6.1.1"
rlp = "0.5.2"