[package]
name = "multichain_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
serde = "1"
hex = "0.4.3"
ic-cdk-macros = "0.6.0"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
ethereum-tx-sign = "6.1.1"
rlp = "0.5.2"
sha2 = "0.10.6"
tx-from-scratch = "0.1.0"
secp256k1 = { version = "0.25.0", features = ["default", "recovery"] }
serde_json = "1.0.39"
ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }

[dev-dependencies]
ethereum-types = "0.14.1"
